feat: change css

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
               <h3><span>Russian : </span> native </h3>
             </div>
           </div>
-          <a href="#" class="btn"> Download CV <i class="fas fa-download"></i></a>
+          <a href="./Resume-anna-kuznetsova.pdf" class="btn"> Download CV <i class="fas fa-download"></i></a>
         </div>
         <div class="count-container">
           <img src="./img/about.png">
