feat: update html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <!-- font awesome cdn link  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="./css/style.css" rel="stylesheet">
-  <title>Main</title>
+  <link rel="icon" href="./img/favicon.ico">
+  <title>Anna</title>
 </head>
 <body>
   <!-- Navigation -->
