feat: upgrade html

--- a/contacts.html
+++ b/contacts.html
@@ -62,7 +62,7 @@
                   <a href="https://www.behance.net/just_anna" class="fab fa-behance"></a>
               </div>
           </div>
-          <form action="http://formspree.io/annakkuz@gmail.com" method="post">
+          <form action="https://formspree.io/f/xwkybydn" method="post">
               <div class="inputBox">
                   <input type="text" placeholder="Your name" required>
                   <input type="number" placeholder="Your number">
