--- a/contacts.html
+++ b/contacts.html
@@ -62,19 +62,21 @@
                   <a href="https://www.behance.net/just_anna" class="fab fa-behance"></a>
               </div>
           </div>
-          <form action="https://formspree.io/f/xwkybydn" method="POST">
+          <form onsubmit="sendEmail(); reset(); return false;">
               <div class="inputBox">
-                  <input type="text" placeholder="Your name" required>
-                  <input type="number" placeholder="Your number">
+                  <input type="text" id="name" placeholder="Your name" required>
+                  <input type="number" id="phone" placeholder="Your number">
               </div>
               <div class="inputBox">
-                  <input type="email" placeholder="Your email" required>
-                  <input type="text" placeholder="Your subject">
+                  <input type="email" id="email" placeholder="Your email" required>
+                  <input type="text" id="subject" placeholder="Your subject">
               </div>
-              <textarea name="" placeholder="Your text" id="" cols="30" rows="10"></textarea>
+              <textarea name="" id="message" placeholder="Your text" id="" cols="30" rows="10"></textarea>
               <input type="submit" value="Send" class="btn">
           </form>
       </div>
       </section>
+      <script src="https://smtpjs.com/v3/smtp.js"></script>
+      <script src="form.js"></script>
 </body>
 </html>
