feat: update blog.html

--- a/blog.html
+++ b/blog.html
@@ -44,6 +44,16 @@
                   <a href="https://medium.com/@justannakuznetsova/feeling-lonely-in-your-coding-journey-rs-school-will-cheer-you-up-f8b046101e1b" class="btn"> Read <i class="fas fa-link"></i> </a>
               </div>
           </div>
+        
+        <div class="box">
+              <div class="image">
+                  <img src="img/blog3.png" alt="">
+              </div>
+              <div class="content">
+                  <p>Happy upcoming Saint Patrick’s Day! I prepared some cool VS Code themes recommendations for you. Cheer yourself up.</p>
+                  <a href="https://medium.com/@justannakuznetsova/%EF%B8%8F5-vs-code-for-your-perfect-saint-patricks-day-f4735a89d76f" class="btn"> Read <i class="fas fa-link"></i> </a>
+              </div>
+          </div>
   
       </div>
   
