--- a/about.html
+++ b/about.html
@@ -12,13 +12,24 @@
 <body>
 
   <!-- Navigation -->
-    <nav class="navigation-container">
-      <a href="index.html"><i class="fas fa-home"></i> <span>Home</span></a>
-      <a href="about.html"><i class="fas fa-user"></i> <span>About</span></a>
-      <a href="projects.html"><i class="fas fa-briefcase"></i> <span>Projects</span></a>
-      <a href="blog.html"><i class="fas fa-blog"></i> <span>Blog</span></a>
-      <a href="contacts.html"><i class="fas fa-address-book"></i> <span>Contacts</span></a>
-    </nav>
+  <nav class="navigation-container">
+    <a href="index.html"><i class="fas fa-home"></i> <span data-i18="home">Home</span></a>
+    <a href="about.html"><i class="fas fa-user"></i> <span data-i18="about">About</span></a>
+    <a href="projects.html"><i class="fas fa-briefcase"></i> <span data-i18="projects">Projects</span></a>
+    <a href="design.html"><i class="fas fa-palette"></i> <span data-i18="design">Designs</span></a>
+    <a href="blog.html"><i class="fas fa-blog"></i> <span data-i18="blog">Blog</span></a>
+    <a href="contacts.html"><i class="fas fa-address-book"></i> <span data-i18="contacts">Contacts</span></a>
+  </nav>
+
+  <!-- Language Settings -->
+
+  <!-- <div class="language-box">
+    <span class="nav-hash"><button type="button" class="language language-button-en">en</button></span>
+    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
+    <span class="nav-hash"><button type="button" class="language language-button-ru">ru</button></span>
+    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
+    <span class="nav-hash"><button type="button" class="language language-button-ch">ch</button></span>
+  </div> -->
 
     <!-- About Me -->
     <section class="about">
@@ -31,7 +42,7 @@
               <h1>General Info</h1>
               <h3><span>Name : </span> Anna Kuznetsova </h3>
               <h3><span>Age : </span> 24 </h3>
-              <h3><span>Freelance : </span> Available</h3>
+              <h3><span>Country : </span> Mexico, Mérida</h3>
               <h3><span>Experience : </span> 2 years </h3>
             </div>
             
