--- a/contacts.html
+++ b/contacts.html
@@ -11,13 +11,24 @@
 </head>
 <body>
   <!-- Navigation -->
-    <nav class="navigation-container">
-      <a href="index.html"><i class="fas fa-home"></i> <span>Home</span></a>
-      <a href="about.html"><i class="fas fa-user"></i> <span>About</span></a>
-      <a href="projects.html"><i class="fas fa-briefcase"></i> <span>Projects</span></a>
-      <a href="blog.html"><i class="fas fa-blog"></i> <span>Blog</span></a>
-      <a href="contacts.html"><i class="fas fa-address-book"></i> <span>Contacts</span></a>
-    </nav>
+  <nav class="navigation-container">
+    <a href="index.html"><i class="fas fa-home"></i> <span data-i18="home">Home</span></a>
+    <a href="about.html"><i class="fas fa-user"></i> <span data-i18="about">About</span></a>
+    <a href="projects.html"><i class="fas fa-briefcase"></i> <span data-i18="projects">Projects</span></a>
+    <a href="design.html"><i class="fas fa-palette"></i> <span data-i18="design">Designs</span></a>
+    <a href="blog.html"><i class="fas fa-blog"></i> <span data-i18="blog">Blog</span></a>
+    <a href="contacts.html"><i class="fas fa-address-book"></i> <span data-i18="contacts">Contacts</span></a>
+  </nav>
+
+  <!-- Language Settings -->
+
+  <!-- <div class="language-box">
+    <span class="nav-hash"><button type="button" class="language language-button-en">en</button></span>
+    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
+    <span class="nav-hash"><button type="button" class="language language-button-ru">ru</button></span>
+    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
+    <span class="nav-hash"><button type="button" class="language language-button-ch">ch</button></span>
+  </div> -->
 
     <section class="contact">
 
@@ -35,7 +46,7 @@
                       <i class="fas fa-map"></i>
                       <div class="info">
                           <h3>Address :</h3>
-                          <p>Queretaro, Mexico</p>
+                          <p>Mexico, Mérida</p>
                       </div>
                   </div>
       
@@ -62,7 +73,7 @@
                   <a href="https://www.behance.net/just_anna" class="fab fa-behance"></a>
               </div>
           </div>
-          <form onsubmit="sendEmail(); reset(); return false;">
+          <form method="post">
               <div class="inputBox">
                   <input type="text" id="name" placeholder="Your name" required>
                   <input type="number" id="phone" placeholder="Your number">
@@ -71,8 +82,8 @@
                   <input type="email" id="email" placeholder="Your email" required>
                   <input type="text" id="subject" placeholder="Your subject">
               </div>
-              <textarea name="" id="message" placeholder="Your text" id="" cols="30" rows="10"></textarea>
-              <input type="submit" value="Send" class="btn">
+              <textarea id="message" placeholder="Your text" cols="30" rows="10"></textarea>
+              <input type="button" value="Send" class="btn" onclick="sendEmail()">
           </form>
       </div>
       </section>
