--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="./css/style.css" rel="stylesheet">
   <link rel="icon" href="./img/favicon.ico">
+  <script type="module" src="./index.js"></script>
   <title>Anna</title>
 </head>
 <body>
   <!-- Navigation -->
     <nav class="navigation-container">
-      <a href="index.html"><i class="fas fa-home"></i> <span>Home</span></a>
-      <a href="about.html"><i class="fas fa-user"></i> <span>About</span></a>
-      <a href="projects.html"><i class="fas fa-briefcase"></i> <span>Projects</span></a>
-      <a href="blog.html"><i class="fas fa-blog"></i> <span>Blog</span></a>
-      <a href="contacts.html"><i class="fas fa-address-book"></i> <span>Contacts</span></a>
+      <a href="index.html"><i class="fas fa-home"></i> <span data-i18="home">Home</span></a>
+      <a href="about.html"><i class="fas fa-user"></i> <span data-i18="about">About</span></a>
+      <a href="projects.html"><i class="fas fa-briefcase"></i> <span data-i18="projects">Projects</span></a>
+      <a href="design.html"><i class="fas fa-palette"></i> <span data-i18="design">Designs</span></a>
+      <a href="blog.html"><i class="fas fa-blog"></i> <span data-i18="blog">Blog</span></a>
+      <a href="contacts.html"><i class="fas fa-address-book"></i> <span data-i18="contacts">Contacts</span></a>
     </nav>
 
     <!-- Particles -->
@@ -54,17 +56,28 @@
       <div class="particle"></div>
     </div>
     
+  <!-- Language Settings -->
+
+  <div class="language-box">
+    <span class="nav-hash"><button type="button" class="language language-button-en active">en</button></span>
+    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
+    <span class="nav-hash"><button type="button" class="language language-button-ru">ru</button></span>
+    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
+    <span class="nav-hash"><button type="button" class="language language-button-ch">ch</button></span>
+  </div>
+
   <!-- Me -->
   <section class="main">
+    
     <div class="image">
       <img src="img/CV.png" alt="A profile photo of Anna Kuznetsova.">
     </div>
 
     <div class="content">
-      <h3>Hi! I'm Anna</h3>
-      <span>Front-end developer</span>
-      <p>I made this website using my skills in design and coding. Check it out!</p>
-      <a href="./about.html" class="btn"> About me <i class="fas fa-user"></i></a>
+      <h3 data-i18="anna">Hi! I'm Anna</h3>
+      <span data-i18="front">Front-end developer</span>
+      <p data-i18="boast">I made this website using my skills in design and coding. Check it out!</p>
+      <a href="./about.html" data-i18="about-btn" class="btn"> About me <i class="fas"></i></a>
     </div>
 
   </section>
