feat: update projects

--- a/projects.html
+++ b/projects.html
@@ -11,13 +11,24 @@
 </head>
 <body>
   <!-- Navigation -->
-    <nav class="navigation-container">
-      <a href="index.html"><i class="fas fa-home"></i> <span>Home</span></a>
-      <a href="about.html"><i class="fas fa-user"></i> <span>About</span></a>
-      <a href="projects.html"><i class="fas fa-briefcase"></i> <span>Projects</span></a>
-      <a href="blog.html"><i class="fas fa-blog"></i> <span>Blog</span></a>
-      <a href="contacts.html"><i class="fas fa-address-book"></i> <span>Contacts</span></a>
-    </nav>
+  <nav class="navigation-container">
+    <a href="index.html"><i class="fas fa-home"></i> <span data-i18="home">Home</span></a>
+    <a href="about.html"><i class="fas fa-user"></i> <span data-i18="about">About</span></a>
+    <a href="projects.html"><i class="fas fa-briefcase"></i> <span data-i18="projects">Projects</span></a>
+    <a href="design.html"><i class="fas fa-palette"></i> <span data-i18="design">Designs</span></a>
+    <a href="blog.html"><i class="fas fa-blog"></i> <span data-i18="blog">Blog</span></a>
+    <a href="contacts.html"><i class="fas fa-address-book"></i> <span data-i18="contacts">Contacts</span></a>
+  </nav>
+
+    <!-- Language Settings -->
+
+  <!-- <div class="language-box">
+    <span class="nav-hash"><button type="button" class="language language-button-en">en</button></span>
+    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
+    <span class="nav-hash"><button type="button" class="language language-button-ru">ru</button></span>
+    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
+    <span class="nav-hash"><button type="button" class="language language-button-ch">ch</button></span>
+  </div> -->
 
     <!-- portfolio section starts  -->
 
@@ -41,7 +52,7 @@
           <div class="content">
               <h3>Pics Gallery</h3>
               <p>A small photo-search system with Pexel API to find some charming free photos for your projects</p>
-              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/image-gallery/"> Check it out </a>
+              <a href="#"> Check it out </a>
           </div>
       </div>
 
@@ -50,7 +61,7 @@
           <div class="content">
               <h3>Chinese Memory Game</h3>
               <p>Little memory game for kids to remember some basic characters</p>
-              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/memory-game/"> Check it out </a>
+              <a href="#"> Check it out </a>
           </div>
       </div>
 
