feat: update index.html

--- a/design.html
+++ b/design.html
@@ -38,7 +38,7 @@
   
           <div class="box">
               <div class="image">
-                  <img src="img/design-1.png" alt="">
+                  <img src="img/design-1.png" alt="Australian Cryptocurrency Trading Logo">
               </div>
               <div class="content">
                 <p class="heading">Australian Cryptocurrency Trading Logo</p>
@@ -49,7 +49,7 @@
   
           <div class="box">
               <div class="image">
-                  <img src="img/design-2.png" alt="">
+                  <img src="img/design-2.png" alt="Corgie Playing Cards">
               </div>
               <div class="content">
                 <p class="heading">Corgie Playing Cards</p>
@@ -60,7 +60,7 @@
 
           <div class="box">
             <div class="image">
-                <img src="img/design-3.png" alt="">
+                <img src="img/design-3.png" alt="How to Work with Formats Guide">
             </div>
             <div class="content">
               <p class="heading">"How to Work with Formats" Guide</p>
@@ -71,7 +71,7 @@
 
           <div class="box">
             <div class="image">
-                <img src="img/design-4.png" alt="">
+                <img src="img/design-4.png" alt="Graphic Design art project representing Mexican art.">
             </div>
             <div class="content">
               <p class="heading">Graphic Design</p>
@@ -81,7 +81,7 @@
 
           <div class="box">
             <div class="image">
-                <img src="img/design-5.png" alt="">
+                <img src="img/design-5.png" alt="A small recreation of Baidu main page in postmodernistic style.">
             </div>
             <div class="content">
               <p class="heading">Graphic Design</p>
@@ -91,7 +91,7 @@
 
           <div class="box">
             <div class="image">
-                <img src="img/design-6.png" alt="">
+                <img src="img/design-6.png" alt="Polyart for an Ed Sheeran's concert poster.">
             </div>
             <div class="content">
               <p class="heading">Graphic Design</p>
@@ -101,11 +101,11 @@
 
           <div class="box">
             <div class="image">
-                <img id="long" src="img/design-7.png" alt="">
+                <img id="long" src="img/design-7.png" alt="A poster for SpaceX company.">
             </div>
             <div class="content">
               <p class="heading">Poster Design</p>
-              <p>Graphic Design art project representing Mexican art.</p>
+              <p>A poster for SpaceX company.</p>
             </div>
           </div>
 
@@ -115,7 +115,7 @@
             </div>
             <div class="content">
               <p class="heading">Poster Design</p>
-              <p>Graphic Design art project representing Mexican art.</p>
+              <p>A poster in Avant-garde style.</p>
             </div>
           </div>
   
