--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
           <div class="content">
               <h3>Pics Gallery</h3>
               <p>A small photo-search system with Pexel API to find some charming free photos for your projects</p>
-              <a href="#"> Check it out </a>
+              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/image-gallery/"> Check it out </a>
           </div>
       </div>
 
