feat: update js

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
           <div class="content">
               <h3>Chinese Memory Game</h3>
               <p>Little memory game for kids to remember some basic characters</p>
-              <a href="#"> Check it out </a>
+              <a href="https://www.instagram.com/tv/CaaNR-BDp3F/?igshid=YmMyMTA2M2Y="> Check it out </a>
           </div>
       </div>
 
