feat: update js

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
           <div class="content">
               <h3>Personal Website</h3>
               <p>Cool-looking portfolio for a photographer (is only responsive on tablets)</p>
-              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/portfolio/"> Check it out </a>
+              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/portfolio/" target="_blank"> Check it out </a>
           </div>
       </div>
 
@@ -52,7 +52,7 @@
           <div class="content">
               <h3>Pics Gallery</h3>
               <p>A small photo-search system with Pexel API to find some charming free photos for your projects</p>
-              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/image-gallery/"> Check it out </a>
+              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/image-gallery/" target="_blank"> Check it out </a>
           </div>
       </div>
 
@@ -61,7 +61,7 @@
           <div class="content">
               <h3>Chinese Memory Game</h3>
               <p>Little memory game for kids to remember some basic characters</p>
-              <a href="https://www.instagram.com/tv/CaaNR-BDp3F/?igshid=YmMyMTA2M2Y="> Check it out </a>
+              <a href="https://www.instagram.com/tv/CaaNR-BDp3F/?igshid=YmMyMTA2M2Y=" target="_blank"> Check it out </a>
           </div>
       </div>
 
@@ -70,7 +70,7 @@
           <div class="content">
               <h3>Music App</h3>
               <p>My own gorgeous relaxing app for a short yoga session </p>
-              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/chinesesounds/"> Check it out </a>
+              <a href="https://rolling-scopes-school.github.io/justannakuznetsova-JSFEPRESCHOOL/chinesesounds/" target="_blank"> Check it out </a>
           </div>
       </div>
 
