--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
   <section class="main">
     
     <div class="image">
-      <img src="img/CV.png" alt="A profile photo of Anna Kuznetsova.">
+      <img src="img/CV.png" alt="A profile photo of Ana.">
     </div>
 
     <div class="content">
-      <h3 data-i18="anna">Hi! I'm Anna</h3>
-      <span data-i18="front">Front-end developer</span>
+      <h3 data-i18="anna">Hi! I'm Ana</h3>
+      <span data-i18="front">Web developer</span>
       <p data-i18="boast">I made this website using my skills in design and coding. Check it out!</p>
       <a href="./about.html" data-i18="about-btn" class="btn"> About me <i class="fas"></i></a>
     </div>
