fix: edit about.html

--- a/about.html
+++ b/about.html
@@ -21,16 +21,6 @@
     <a href="contacts.html"><i class="fas fa-address-book"></i> <span data-i18="contacts">Contacts</span></a>
   </nav>
 
-  <!-- Language Settings -->
-
-  <!-- <div class="language-box">
-    <span class="nav-hash"><button type="button" class="language language-button-en">en</button></span>
-    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
-    <span class="nav-hash"><button type="button" class="language language-button-ru">ru</button></span>
-    <span class="nav-hash"><p class="language"><img class="fleur" src = "./img/fleur-de-lis.svg"></p></span>
-    <span class="nav-hash"><button type="button" class="language language-button-ch">ch</button></span>
-  </div> -->
-
     <!-- About Me -->
     <section class="about">
       <h1 class="heading"> About <span>Me</span></h1>
@@ -40,21 +30,22 @@
           <div class="box-container">
             <div class="box">
               <h1>General Info</h1>
-              <h3><span>Name : </span> Anna Kuznetsova </h3>
+              <h3><span>Name : </span> Ana </h3>
               <h3><span>Age : </span> 24 </h3>
-              <h3><span>Country : </span> Mexico, Mérida</h3>
+              <h3><span>Country : </span> Mexico </h3>
               <h3><span>Experience : </span> 2 years </h3>
             </div>
             
             <div class="box">
               <h1>Languages</h1>
-              <h3><span>English : </span> fluent (C2, TOEFL)</h3>
-              <h3><span>Chinese : </span> fluent (C2, HSK6)</h3>
-              <h3><span>French : </span>  intermediate (B1) </h3>
-              <h3><span>Russian : </span> native </h3>
+              <h3><span>English </span> </h3>
+              <h3><span>Chinese </span> </h3>
+              <h3><span>French </span>  </h3>
+              <h3><span>Russian </span> </h3>
+              <h3><span>Spanish </span> </h3>
             </div>
           </div>
-          <a href="./Resume-anna-kuznetsova.pdf" class="btn"> Download CV <i class="fas fa-download"></i></a>
+          <a href="./Resume-ana.pdf" class="btn"> Download CV <i class="fas fa-download"></i></a>
         </div>
         <div class="count-container">
           <img src="./img/about.png">
