fix: update about

--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
         <div class="box">
           <i class="fas fa-graduation-cap"></i>
           <span>2015 - 2019</span>
-          <h3>Higher School of Economics, BA</h3>
+          <h3>The Higher School of Economics, BA</h3>
           <p>World Economy and World Politics</p>
         </div>
 
@@ -137,21 +137,21 @@
           <div class="box">
             <i class="fas fa-graduation-cap"></i>
             <span>2021 - 2022</span>
-            <h3>Sberbank Programming School 21</h3>
+            <h3>Ecole 42</h3>
             <p>Back-end Development</p>
           </div>
 
           <div class="box">
             <i class="fas fa-graduation-cap"></i>
             <span>2021 - now</span>
-            <h3>RS School</h3>
+            <h3>EPAM</h3>
             <p>Front-end Development</p>
           </div>
 
           <div class="box">
             <i class="fas fa-graduation-cap"></i>
             <span>2021 - now</span>
-            <h3>Geekbrains</h3>
+            <h3>International Design School</h3>
             <p>Graphic Design</p>
           </div>
 
